put oauth.io script at layout

--- a/app/views/top/new.html.erb
+++ b/app/views/top/new.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <script src="/path/to/oauth.js"></script>
+  <!-- <script src="/path/to/oauth.js"></script> -->
 </head>
 
   <p>Facebookで認証できます。</p>
